--- a/assets/style.css
+++ b/assets/style.css
@@ -1,53 +1,54 @@
-/* flip the pane when hovered */
+body { font-family: sans-serif; }
 
-.flip-container.hover .flipper {
-  transform: rotateY(180deg);
+.scene {
+  display: inline-block;
+  width: 200px;
+  height: 300px;
+  margin: 40px 20px;
+  perspective: 600px;
 }
 
-.flip-container,
-.front,
-.back {
-  width: 250px;
-  height: 250px;
-}
-
-
-/* flip speed */
-
-.flipper {
-  transition: 0.8s;
-  transform-style: preserve-3d;
+.card {
   position: relative;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  transform-style: preserve-3d;
+  transform-origin: center right;
+  transition: transform 1s;
 }
 
+.card.is-flipped {
+  transform: translateX(-100%) rotateY(-180deg);
+}
 
-/* hide back of pane during swap */
-
-.front,
-.back {
-  backface-visibility: hidden;
+.card__face {
   position: absolute;
-  top: 0;
-  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 5px 5px;
+  color: white;
+  text-align: center;
+  font-weight: bold;
+  font-size: 40px;
+  backface-visibility: hidden;
 }
 
-
-/* front pane, placed above back */
-
-.front {
-  z-index: 2;
-  transform: rotateY(0deg);
+.card__face--front {
+  background-image: url("https://github.com/auliaardan/PDKT-CardGame/blob/main/assets/Back.png?raw=true");
+  background-color: #00f7ff; 
+  height: 100%; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover; 
 }
 
-
-/* back, initially hidden pane */
-
-.back {
-  background: url ("/assets/Front.png");
+.card__face--back {
+  background-image: url('https://github.com/auliaardan/PDKT-CardGame/blob/main/assets/Front.png?raw=true');
+  background-color: #09f7bb; 
+  height: 100%; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover; 
   transform: rotateY(180deg);
-}
-
-.front-card {
-  background: url ("/assets/Back.png");
-  background-size: cover;
 }
