--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,13 @@
-body { font-family: sans-serif; }
+body { 
+  font-family: 'Times New Roman', Times, serif; 
+  background-color: #d9d9d9;
+  margin: 0;
+}
+
+@font-face {
+  font-family: Bukhari-Script;
+  src: url('BukhariScript-Regular.ttf') format('truetype');
+}
 
 .scene {
   display: inline-block;
@@ -63,4 +72,36 @@ body { font-family: sans-serif; }
 
 .card-holder{
   display: none;
+}
+
+header{
+  background-color: #cb6ce6;
+  padding: 10px 2px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+header h1{
+  font-family: 'Bukhari-Script';
+  color: azure;
+}
+
+.img-logo{
+  margin: 0px 5px;
+  display: inline;
+  width: 100px;
+}
+
+
+footer{
+  background-color: #ff66c4;
+}
+
+@media screen and (max-width: 1020px) {
+
+}
+
+@media screen and (max-width: 670px) {
+   
 }
