--- a/assets/style.css
+++ b/assets/style.css
@@ -104,11 +104,21 @@ main{
   color: white;
   text-shadow: 2px 2px #fd6155 ;
   transform: rotate(-20deg);
+  text-align: center;
+  font-size: 50px;
 }
 
 .content{
+  flex-basis: 75%;
   display: flex;
   flex-direction: column;
+  background-color: #5ce1e6;
+  padding: 10px 5px;
+}
+
+.game-screen{
+  display: flex;
+  margin: 0 auto;
 }
 
 #startButton{
@@ -118,6 +128,12 @@ main{
   border-radius: 10px;
   padding: 5px 30px;
   white-space: nowrap;
+  margin-top: 20px;
+  font-size: 15px;
+}
+
+#startButton:hover{
+  cursor: pointer;
 }
 
 footer{
@@ -125,7 +141,7 @@ footer{
 }
 
 @media screen and (max-width: 1020px) {
-
+  
 }
 
 @media screen and (max-width: 670px) {
