--- a/assets/style.css
+++ b/assets/style.css
@@ -38,10 +38,6 @@ body {
   width: 100%;
   height: 100%;
   padding: 5px 5px;
-  color: white;
-  text-align: center;
-  font-weight: bold;
-  font-size: 25px;
   backface-visibility: hidden;
 }
 
@@ -71,6 +67,9 @@ body {
   align-items: center;
   margin: 0 5px;
   color: #cb6ce6;
+  text-align: center;
+  font-size: 1.2em;
+  word-wrap: break-word
 }
 
 .turn-off{
